--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,8 @@ div :where(h1, h2) {
 /*!    leftsidebar   !*/
 
 #leftSideBar {
-    width: 15%;
+    width: 18%;
+    height: 100%;
     background-color: transparent;
     position: absolute;
     top: 50%;
@@ -298,7 +299,7 @@ div :where(h1, h2) {
     color: var(--mainColor);
     border: 1px solid var(--mainColor);
     backdrop-filter: blur(30px);
-    border-radius: 10px;
+    /* border-radius: 10px; */
     right: calc(100% + 3px);
     transition: all 0.2s linear;
     z-index: 654646;
@@ -646,6 +647,10 @@ button:hover {
     #tour p {
         font-size: 30px;
     }
+
+    #leftSideBar {
+        width: 200px;
+    }
 }
 
 
@@ -656,9 +661,9 @@ button:hover {
         gap: 3px;
     }
 
-    #leftSideBar {
-        width: 150px;
-    }
+    /* #leftSideBar {
+        width: 200px;
+    } */
 
 }
 
