--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ div :where(h1, h2) {
 .bgLayer {
     background-image: url(../images/16.jpg);
     background-position: center;
-    background-size: auto;
+    background-size: cover;
 }
 
 .darkLayer {
